<resources>
    <string name="app_name">Tokei1</string>
    <string name="start_name">スタート</string>
    <string name="reset_name">リセット</string>
    <string name="jikann_name">00:00:00</string>
    <string name="reset">reset</string>
    <string name="Start">start</string>
    <string name="_00_00">00:00:00</string>
    <string name="_00_002">Timer</string>
    <string name="buttonbyou">+秒</string>
    <string name="buttonhunn">+分</string>
    <string name="buttonhunnmaina">-分</string>
    <string name="buttonbyoumaina">-秒</string>
    <string name="button0">初期化</string>
    <string name="buttonjikapu">+時間</string>
    <string name="buttonjikamai">－時間</string>
</resources>
